--- a/app/src/main/res/layout/fragment_wc.xml
+++ b/app/src/main/res/layout/fragment_wc.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/empty_mywordcamps"
+        android:gravity="center"
         android:textColor="@color/secondary_text_color"
         android:textSize="@dimen/empty_view_text_size"
         android:visibility="gone" />
