--- a/app/src/main/res/layout/fragment_wc.xml
+++ b/app/src/main/res/layout/fragment_wc.xml
@@ -11,6 +11,7 @@
         android:gravity="center"
         android:textColor="@color/secondary_text_color"
         android:textSize="@dimen/empty_view_text_size"
+        android:padding="@dimen/normal_padding"
         android:visibility="gone" />
 
     <android.support.v4.widget.SwipeRefreshLayout
