--- a/app/src/main/res/layout/fragment_wcdetails_speaker.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_speaker.xml
@@ -12,6 +12,7 @@
         android:text="@string/speaker_to_be_announced"
         android:textColor="@color/secondary_text_color"
         android:textSize="@dimen/empty_view_text_size"
+        android:padding="@dimen/normal_padding"
         android:visibility="gone" />
 
     <android.support.v4.widget.SwipeRefreshLayout
